# Mini-Movie-Scraper

./: .gitignore  README.md  pyproject.toml  schema.sql
alembic/: env.py
alembic/versions/: 063146952796_create_movie_table.py  86398e7b7b82_create_movie_table.py
app/: auth.py  config.py  main.py  models.py  movie_api.py  scrape.py
