[project]
name = "movie-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
]
