[project]
name = "movie-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "sqlmodel>=0.0.38",
]
